fix map responsiveness to jump to list sooner since map height was changing

--- a/sass/c4h-customer-stories-public.scss
+++ b/sass/c4h-customer-stories-public.scss
@@ -35,7 +35,7 @@
   }
 }
 
-@media all and (max-width:700px) {
+@media all and (max-width:940px) {
   .cs-map {
     display:none;
   }
@@ -46,7 +46,7 @@
     clear:both;
   }
 }
-@media all and (min-width:700px) {
+@media all and (min-width:940px) {
   .cs-list {
     display:none;
   }
@@ -105,7 +105,7 @@
   display:none;
 }
 
-.cs-list-headline {
+.cs-list-item .cs-list-headline h2 {
   color: rgb(23, 117, 84);
   font-size: 24px;
   font-weight: 700;
